--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^1.1.1",
     "env-cmd": "^10.1.0",
     "ethers": "^5.6.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-day-and-night-toggle": "^1.0.18",
     "react-dom": "^18.2.0",
